# OpenOperator

./: .gitignore  README.md  pyproject.toml  requirements.txt
open_operator/: __init__.py  controller_model.py  desktop_screen.py  general_utils.py  storage_utils.py
scripts/: watch_screen.py
